# pro-photo-studio

./: .env.example  .gcloudignore  .gitattributes  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  README.md  RUNBOOK.md  SECURITY.md  package.json  pnpm-lock.yaml  pyproject.toml
.github/workflows/: build-desktop.yml  ci.yml  hf-space-deploy.yml  release.yml  weekly-discovery.yml
deploy/: README.md  docker-compose.dev.yml  docker-compose.prod.yml
deploy/caddy/: Caddyfile
deploy/docker/: Dockerfile.api  Dockerfile.web
deploy/docker/qdrant/: docker-compose.yml
deploy/hf_space/: README.md  app.py  requirements.txt
docs/: FEATURE_MATRIX_FOR_INVESTORS.md  INVESTOR_BRIEF.md  INVESTOR_UPDATE_2026-05-05.md  INVESTOR_UPDATE_2026-05-05_VI.md  MANUAL_ML_DEMO_GUIDE.md  ROADMAP.md
docs/showcase/synthetic_villa/: scorecard.json
examples/: build_feature_demo_composites.py  build_investor_showcase.py
investor_showcase/: INDEX.md
investor_showcase/all/0C1A5017/: stage_report.json
investor_showcase/all/0C1A5020/: stage_report.json
investor_showcase/all/0C1A5023/: stage_report.json
investor_showcase/all/0C1A5026/: stage_report.json
investor_showcase/all/0C1A5029/: stage_report.json
investor_showcase/all/0C1A5032/: stage_report.json
investor_showcase/all/0C1A5035/: stage_report.json
investor_showcase/all/0C1A5038/: stage_report.json
investor_showcase/all/0C1A5041/: stage_report.json
investor_showcase/all/0C1A5044/: stage_report.json
scripts/: _smoke_fivek.py  _verify_workflows.py  bootstrap_dev.py  build_delivery.sh  build_full_source.sh  build_portable_delivery.sh  check_no_secrets.py  discover_repos.py  download_sam.sh  full_recovery_ceiling.py  generate_showcase.py  perfect_window.py  release_v0.3.0.sh  setup_vlm_sam.sh
scripts/tests/: test_discover_repos.py
training/: Dockerfile.vertex  GCP_SETUP_STATUS.md  README.md  cloudbuild.yaml  evaluate.py  finetune_qwen_edit.py
training/configs/: fivek_lora.yaml  vertex_train.yaml  vertex_train_smoke.yaml
training/scripts/: build_push_image.sh  build_push_image_cloudbuild.sh  cloud_shell_bootstrap.sh  stage_fivek_to_gcs.sh
training/tests/: test_evaluate_smoke.py  test_finetune_dry_run.py
