[project]
name = "pro-photo-studio"
version = "0.1.0"
description = "Production-grade real-estate photo enhancement, 2026 edition"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = "Apache-2.0"
authors = [
    { name = "NgVB1408" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Image Processing",
]

[tool.uv.workspace]
members = [
    "packages/core",
    "packages/ai",
    "packages/api",
    "packages/desktop",
]

[tool.uv.sources]
pps-core = { workspace = true }
pps-ai = { workspace = true }
pps-api = { workspace = true }
pps-desktop = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5",
    "ruff>=0.7",
    "mypy>=1.13",
    "pre-commit>=4",
    "pip-audit>=2.7",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["packages/core/pps_core", "packages/ai/pps_ai", "packages/api/pps_api", "packages/desktop/pps_desktop"]

[tool.ruff.lint]
select = [
    "E", "F", "W",      # pycodestyle + pyflakes
    "I",                # isort
    "B",                # bugbear
    "UP",               # pyupgrade
    "SIM",              # simplify
    "RUF",              # ruff-specific
    "S",                # bandit (security)
    "T20",              # no print
    "TID",              # tidy imports
]
ignore = [
    "E501",             # line length handled by formatter
    "S101",             # assert ok in tests
    "S311",             # numpy random ok
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S", "T20"]
"**/tests/**/*.py" = ["S", "T20"]
"**/__init__.py" = ["F401"]
# Legacy modules ported from watermark-toolkit. Vietnamese docstrings
# trigger RUF001/RUF002 false positives; ambiguous l/I single-char names
# (E741) are domain-conventional in CV (LAB L channel, image I matrix).
# Cleanup tracked in Phase 1.
"packages/**/*.py" = [
    "RUF001",  # ambiguous-unicode-character-string (Vietnamese / × symbol)
    "RUF002",  # ambiguous-unicode-character-docstring
    "RUF003",  # ambiguous-unicode-character-comment
]
"packages/core/pps_core/**/*.py" = [
    "RUF001", "RUF002", "RUF003",
    "E741",    # ambiguous-variable-name (l, I conventional in CV/LAB)
    "B008",    # function-call-in-default-argument (legacy, not a real issue here)
    "S310",    # suspicious-url-open-usage (audited, sources controlled)
    "SIM102",  # collapsible-if (intentional for readability in legacy)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
plugins = []

[[tool.mypy.overrides]]
module = ["cv2.*", "rawpy.*", "diffusers.*", "transformers.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests", "packages/*/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests requiring GPU",
    "integration: marks tests requiring docker-compose stack",
]

[tool.coverage.run]
source = ["packages"]
omit = [
    "*/tests/*",
    "*/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
